<resources>
    <string name="app_name">News App2</string>

    <string name="no_connection">No internet connection.</string>
    <string name="no_article">No articles found.</string>

    <string name="section_name">section name</string>
    <string name="title">title</string>
    <string name="date">date</string>
    <string name="author">author</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Articles Settings</string>

    <string name="settings_from_date_label">From date</string>
    <string name="settings_from_date_key" translatable="false">from_date</string>
    <string name="settings_from_date_default" translatable="false">2017-01-01</string>

    <string name="settings_to_date_label">To date</string>
    <string name="settings_to_date_key" translatable="false">to_date</string>
    <!--<string name="settings_to_date_default" translatable="false">currentTime</string>-->

    <string name="settings_topic_label">Topic</string>
    <string name="settings_topic_key" translatable="false">topic</string>
    <string name="settings_topic_default"></string>
    <string name="settings_topic_example">e.g. architecture, "book in English"</string>

    <string name="settings_language_label">Language</string>
    <string name="settings_language_key" translatable="false">language</string>
    <string name="settings_language_default" translatable="false">@string/settings_language_english_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_language_english_label">English</string>
    <string name="settings_language_english_value" translatable="false">en</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_language_french_label">French</string>
    <string name="settings_language_french_value" translatable="false">fr</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_language_german_label">German</string>
    <string name="settings_language_german_value" translatable="false">de</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_newest_label">From the newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_oldest_label">From the oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
